# DungeonFightSimulator

./: CMakeLists.txt  CMakeSettings.json  README.md  reference.md
Simulator/: CMakeLists.txt
Simulator/include/: action.h  actionfactory.h  character.h  dice.h  diceroll.h  example_parser.h  filehandling.h  logic.h  main.h  makefooaction.h  parser.h
Simulator/src/: action.cpp  actionfactory.cpp  dice.cpp  diceroll.cpp  filehandling.cpp  main.cpp  parser.cpp
Simulator/test/: dice_test.cpp  diceroll_test.cpp
